# upscaler

./: .env.example  .gitignore  README.md  main.py  model_registry.py  model_registry_video.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  upscaler.py  upskale.py  upskale_env.py  video_upscaler.py
.omc/state/: agent-replay-2ba7b237-0b0a-43af-ac99-900bbfdea0e2.jsonl  subagent-tracking.json
loaders/: __init__.py  base.py  flashvsr.py  seedvr2.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_registry.py  test_upscaler.py  test_upskale.py  test_video_registry.py  test_video_upscaler.py  test_video_validation.py
