[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upskale"
version = "1.0.0"
description = "Local AI image/video upscaler — RTX 5090 GPU."
requires-python = ">=3.11"
authors = [{ name = "ZEROBI" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.12",
  "pydantic>=2.9",
  "Pillow>=10.4",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "spandrel>=0.4",
  "imageio-ffmpeg>=0.5",
  "huggingface_hub>=0.26",
  "psutil>=5.9",
  "einops>=0.7",
  "omegaconf>=2.3.0",
  "diffusers>=0.33.1",
  "peft>=0.17.0",
  "rotary_embedding_torch>=0.5.3",
  "gguf>=0.10",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "safetensors>=0.4",
  "accelerate>=0.30",
  "transformers>=4.40,<4.50",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "mypy>=1.13"]

[project.scripts]
upskale = "upskale:_console_main"
upskale-init-env = "upskale_env:init"
upskale-server = "main:_console_main"

[tool.setuptools]
py-modules = [
  "upskale",
  "upskale_env",
  "upscaler",
  "video_upscaler",
  "model_registry",
  "model_registry_video",
  "schemas",
  "main",
]
packages = ["loaders"]
